objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>SE Global Marketo Lead Process</fullName>
        <description>Jul 2014: Marketing Automation Lead Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Disengaged</fullName>
        </values>
        <values>
            <fullName>Engaged</fullName>
        </values>
        <values>
            <fullName>Non-Marketable</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Recycled</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SE_GlobalLeadProcess</fullName>
        <description>SE Global Lead Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>1 - New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>2 - Working</fullName>
        </values>
        <values>
            <fullName>3 - Closed - Duplicate</fullName>
        </values>
        <values>
            <fullName>3 - Closed - Existing Opportunity</fullName>
        </values>
        <values>
            <fullName>3 - Closed - Opportunity Created</fullName>
        </values>
        <values>
            <fullName>3 - Closed - Other</fullName>
        </values>
        <values>
            <fullName>3 - Closed - Qualified %26 Sold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SE_LeadContactProcess</fullName>
        <description>Process for Lead Contacts</description>
        <isActive>true</isActive>
        <values>
            <fullName>3 - Closed - Opportunity Created</fullName>
        </values>
        <values>
            <fullName>Active</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccountClassificationLevel__c</fullName>
        <description>Mar19 Release: Retrieve the classification level 1 value of associated account.</description>
        <formula>TEXT(Account__r.ClassLevel1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Classification Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountContactShouldBe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MKT AUG 19: To check whether account associated to contact in lead is consistent with contact</description>
        <label>AccountContactShouldBe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountLocalName__c</fullName>
        <description>DEC 2012 Rel: Added account local name</description>
        <label>Account Local Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountMarketSegment__c</fullName>
        <description>Mar19 Release: Retrieve the market segment value of associated account</description>
        <formula>TEXT(Account__r.MarketSegment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Market Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SEPTEMBER RELEASE - This custom field stores the Account associated with the lead.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AdditionalAddress__c</fullName>
        <description>July 2014 Additional Address for Marketo</description>
        <label>Additional Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdditionalQuestions__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the Additional Questions related to the lead.</description>
        <label>Additional Information</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the application details of a Lead.</description>
        <label>Application</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AssignmentDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>SEPTEMBER RELEASE - This custom field captures the assignment date of the Lead to Opportunity.</description>
        <label>Assignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Authority__c</fullName>
        <description>July 2014 Authority for Marketo</description>
        <label>Authority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUT001</fullName>
                </value>
                <value>
                    <fullName>AUT002</fullName>
                </value>
                <value>
                    <fullName>AUT003</fullName>
                </value>
                <value>
                    <fullName>AUT004</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BUFocus__c</fullName>
        <formula>IF ( INCLUDES ( NonMarcommCampaign__r.BUFocus__c , &quot;BD&quot; ), &quot;EcoBuilding; &quot;,null ) &amp;
IF ( INCLUDES ( NonMarcommCampaign__r.BUFocus__c , &quot;EN&quot; ), &quot;Energy; &quot;,null ) &amp;
IF ( INCLUDES ( NonMarcommCampaign__r.BUFocus__c , &quot;ID&quot; ), &quot;Industry; &quot;,null ) &amp;
IF ( INCLUDES ( NonMarcommCampaign__r.BUFocus__c , &quot;ITB&quot; ), &quot;ITB; &quot;,null ) &amp;
IF ( INCLUDES ( NonMarcommCampaign__r.BUFocus__c , &quot;Power&quot; ), &quot;Power; &quot;,null ) &amp;
IF ( INCLUDES ( NonMarcommCampaign__r.BUFocus__c , &quot;All Business Units&quot; ), &quot;All Business Units; &quot;,&apos;&apos;)</formula>
        <label>BU Focus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BehavioralScore__c</fullName>
        <description>July 2014 Behavioral Score for Marketo</description>
        <label>Behavioral Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BrandMarketed__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the SE Brand that was marketed in the activity.</description>
        <inlineHelpText>The SE Brand that was marketed in the activity</inlineHelpText>
        <label>Brand Marketed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BuildingsDoE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mar16 Release - Marketo related fields</description>
        <label>Buildings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BusinessMarketed__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the type of Business Market marked by the Lead.</description>
        <inlineHelpText>The SE Business that was marketed in the activity</inlineHelpText>
        <label>Business Marketed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMOppID__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field is used to store CRM Opportunity ID.</description>
        <label>Other CRM Opp ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallAttemptsRemaining__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field gives the number of call attempts remaining.</description>
        <formula>IF( AND(NOT(ISNULL(CallBackLimit__c)),(CallBackLimit__c&gt;CallAttempts__c)) , CallBackLimit__c -  CallAttempts__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Attempts Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallAttempts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SEPTEMBER RELEASE - This custom field stores the number of call attempts made to contact the Lead.</description>
        <label>Call Attempts</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallBackLimit__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field captures the callback Limit.This field is populated from the Marketing CallBack limit for the corresponding Lead&apos;s priority.</description>
        <label>CallBack Limit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallsAttemptedRemaining__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field concatenates Call Attempts &amp; Call Attempts Remaining separated by ‘/’.</description>
        <formula>TEXT(CallAttempts__c) &amp; &quot; / &quot; &amp;  TEXT(CallAttemptsRemaining__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is based off of rules around how many time we call a Lead based on their priorty before closing the Lead</inlineHelpText>
        <label>Calls Attempted / Remaining</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignLeader__c</fullName>
        <formula>NonMarcommCampaign__r.CampaignLeader__r.FirstName &amp; &apos; &apos; &amp;NonMarcommCampaign__r.CampaignLeader__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Leader</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignName__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the outbound marketing project of a Lead that needs to be tracked. Dec 2012 Rel: Renamed the label as Marcom Campaign Name</description>
        <inlineHelpText>The marketing campaign activity supported</inlineHelpText>
        <label>Marcom Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>APRIL RELEASE 2012 - Marketing - added</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>IND</fullName>
                </value>
                <value>
                    <fullName>ITB</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the City name of a Lead.</description>
        <label>City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassificationLevel1__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the Level 1 Classification of a Lead.</description>
        <label>Classification Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>IG</fullName>
                </value>
                <value>
                    <fullName>LC</fullName>
                </value>
                <value>
                    <fullName>OM</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
                <value>
                    <fullName>RT</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>VR</fullName>
                </value>
                <value>
                    <fullName>WD</fullName>
                </value>
                <value>
                    <fullName>XX</fullName>
                </value>
                <value>
                    <fullName>B2B Distribution</fullName>
                    <isActive>false</isActive>
                    <label>B2B Distribution</label>
                </value>
                <value>
                    <fullName>Business Reseller</fullName>
                    <isActive>false</isActive>
                    <label>Business Reseller</label>
                </value>
                <value>
                    <fullName>CONSUMER RETAILER B2C</fullName>
                    <isActive>false</isActive>
                    <label>CONSUMER RETAILER B2C</label>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                    <isActive>false</isActive>
                    <label>Consumer</label>
                </value>
                <value>
                    <fullName>Consumer Retailer</fullName>
                    <isActive>false</isActive>
                    <label>Consumer Retailer</label>
                </value>
                <value>
                    <fullName>Consumer Retailers</fullName>
                    <isActive>false</isActive>
                    <label>Consumer Retailers</label>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                    <isActive>false</isActive>
                    <label>Contractor</label>
                </value>
                <value>
                    <fullName>Contractors</fullName>
                    <isActive>false</isActive>
                    <label>Contractors</label>
                </value>
                <value>
                    <fullName>Digital &amp; Service Partner</fullName>
                    <isActive>false</isActive>
                    <label>Digital &amp; Service Partner</label>
                </value>
                <value>
                    <fullName>Distributor Wholesales B2B</fullName>
                    <isActive>false</isActive>
                    <label>Distributor Wholesales B2B</label>
                </value>
                <value>
                    <fullName>Electrician</fullName>
                    <isActive>false</isActive>
                    <label>Electrician</label>
                </value>
                <value>
                    <fullName>Electricians</fullName>
                    <isActive>false</isActive>
                    <label>Electricians</label>
                </value>
                <value>
                    <fullName>End Customer - Operator - End User</fullName>
                    <isActive>false</isActive>
                    <label>End Customer - Operator - End User</label>
                </value>
                <value>
                    <fullName>End User</fullName>
                    <isActive>false</isActive>
                    <label>End User</label>
                </value>
                <value>
                    <fullName>End User/Customer</fullName>
                    <isActive>false</isActive>
                    <label>End User/Customer</label>
                </value>
                <value>
                    <fullName>FI</fullName>
                    <isActive>false</isActive>
                    <label>FI</label>
                </value>
                <value>
                    <fullName>IT Reseller</fullName>
                    <isActive>false</isActive>
                    <label>IT Reseller</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClassificationLevel2__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the Level 2 classification of a Lead</description>
        <label>Classification Level 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ClassificationLevel1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BM1</fullName>
                </value>
                <value>
                    <fullName>BM2</fullName>
                </value>
                <value>
                    <fullName>BM3</fullName>
                </value>
                <value>
                    <fullName>BM4</fullName>
                </value>
                <value>
                    <fullName>BM5</fullName>
                </value>
                <value>
                    <fullName>EU3</fullName>
                </value>
                <value>
                    <fullName>EU5</fullName>
                </value>
                <value>
                    <fullName>EU6</fullName>
                </value>
                <value>
                    <fullName>EU7</fullName>
                </value>
                <value>
                    <fullName>EUA</fullName>
                </value>
                <value>
                    <fullName>EUB</fullName>
                </value>
                <value>
                    <fullName>LC1</fullName>
                </value>
                <value>
                    <fullName>LC2</fullName>
                </value>
                <value>
                    <fullName>LC3</fullName>
                </value>
                <value>
                    <fullName>LC4</fullName>
                </value>
                <value>
                    <fullName>LCA</fullName>
                </value>
                <value>
                    <fullName>LCB</fullName>
                </value>
                <value>
                    <fullName>OM1</fullName>
                </value>
                <value>
                    <fullName>OM3</fullName>
                </value>
                <value>
                    <fullName>OM6</fullName>
                </value>
                <value>
                    <fullName>PB1</fullName>
                </value>
                <value>
                    <fullName>PB3</fullName>
                </value>
                <value>
                    <fullName>PB4</fullName>
                </value>
                <value>
                    <fullName>PB5</fullName>
                </value>
                <value>
                    <fullName>RT1</fullName>
                </value>
                <value>
                    <fullName>RT3</fullName>
                </value>
                <value>
                    <fullName>RT5</fullName>
                </value>
                <value>
                    <fullName>RTC</fullName>
                </value>
                <value>
                    <fullName>SC5</fullName>
                </value>
                <value>
                    <fullName>SC6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CompanyKana__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the Company name for the Japanese Contacts.</description>
        <inlineHelpText>For Japanese contacts only</inlineHelpText>
        <label>Company Kana</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyNameCountry__c</fullName>
        <description>SEPTEMBER RELEASE - This field concatenates Account Name(Company Name), Lead Name &amp; Lead Country seperated by pipe.This field is used to identify duplicate leads.</description>
        <formula>Company &amp; &apos; | &apos; &amp;  FirstName &amp; &apos; &apos; &amp; LastName &amp; &apos; | &apos;   &amp;    Country__r.Name</formula>
        <label>Company Name Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactLocalFirstName__c</fullName>
        <description>Jan13 Release</description>
        <label>Contact Local First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactLocalLastName__c</fullName>
        <description>Jan13 Release</description>
        <label>Contact Local Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <description>October2012-contain the value from either Lead Contact or Contact (whichever is populated)</description>
        <formula>IF (
	NOT(ISBLANK(Contact__c)),
	HYPERLINK(&apos;/apex/VFP_HandleRedirect?isdtp=vw&apos;+&apos;&amp;field=ContactName&apos;+&apos;&amp;ID=&apos;+Contact__c,Contact__r.FirstName + &apos; &apos; + Contact__r.LastName,&apos;_self&apos;),
	IF(NOT(ISBLANK(LeadContact__c)),
	HYPERLINK(&apos;/apex/VFP_HandleRedirect?isdtp=vw&apos;+&apos;&amp;field=ContactName&apos;+&apos;&amp;ID=&apos;+LeadContact__c,LeadContact__r.FirstName + &apos; &apos; + LeadContact__r.LastName,&apos;_self&apos;),
	HYPERLINK(&apos;/apex/VFP_HandleRedirect?isdtp=vw&apos;+&apos;&amp;field=ContactName&apos;+&apos;&amp;ID=&apos;+Id,FirstName + &apos; &apos; + LastName,&apos;_self&apos;)		
	)
)</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SEPTEMBER RELEASE - This custom field stores the Contact information of a lead.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Zipcode__c</fullName>
        <description>Country based validation for Zipcode</description>
        <formula>IF( AND(ISBLANK(Account__c), NOT(TransactionalLead__c), ISBLANK(ZipCode__c) &amp;&amp; (Case(Country__r.CountryCode__c, &quot;AE&quot;,1,&quot;AG&quot;,1,&quot;AN&quot;,1,&quot;AO&quot;,1,&quot;AQ&quot;,1,&quot;AW&quot;,1,&quot;BF&quot;,1,&quot;BI&quot;,1,&quot;BJ&quot;,1,&quot;BS&quot;,1,&quot;BW&quot;,1,&quot;BZ&quot;,1,&quot;CD&quot;,1,&quot;CG&quot;,1,&quot;CI&quot;,1,&quot;CK&quot;,1,&quot;CM&quot;,1,&quot;CO&quot;,1,&quot;DJ&quot;,1,&quot;DM&quot;,1,&quot;EG&quot;,1,&quot;ER&quot;,1,&quot;FJ&quot;,1,&quot;GM&quot;,1,&quot;GH&quot;,1,&quot;GD&quot;,1,&quot;GN&quot;,1,&quot;GW&quot;,1,&quot;GY&quot;,1,&quot;HK&quot;,1,&quot;IE&quot;,1,&quot;JM&quot;,1,&quot;KE&quot;,1,&quot;KI&quot;,1,&quot;KM&quot;,1,&quot;KN&quot;,1,&quot;KP&quot;,1,&quot;LC&quot;,1,&quot;MO&quot;,1,&quot;MW&quot;,1,&quot;ML&quot;,1,&quot;MR&quot;,1,&quot;MU&quot;,1,&quot;MS&quot;,1,&quot;NR&quot;,1,&quot;NU&quot;,1,&quot;PA&quot;,1,&quot;PS&quot;,1,&quot;QA&quot;,1,&quot;RW&quot;,1,&quot;ST&quot;,1,&quot;SA&quot;,1,&quot;SC&quot;,1,&quot;SL&quot;,1,&quot;SB&quot;,1,&quot;SO&quot;,1,&quot;SR&quot;,1,&quot;SY&quot;,1,&quot;TK&quot;,1,&quot;TL&quot;,1, &quot;TZ&quot;,1,&quot;TO&quot;,1,&quot;TT&quot;,1,&quot;TV&quot;,1,&quot;UG&quot;,1,&quot;VU&quot;,1,&quot;VN&quot;,1,&quot;YE&quot;,1,&quot;ZW&quot;,1,0)==0) ), $Label.CLOCT18MKT01
,&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country_Zipcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SEPTEMBER RELEASE - This custom field stores the Country information of a Lead based on a reference table</description>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the County information of a Lead.</description>
        <label>County</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedByJobRole__c</fullName>
        <description>This field is used to store the Lead created user&apos;s role. This field is used for reporting</description>
        <label>Created By Job Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreativeHeadline__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the Creative / Headline of response communicated by a Lead.</description>
        <inlineHelpText>Represent the actual Communication asset/piece the customer or prospect sees
Examples
–Sweden Print Newsletter for electrical channel Q1 2009
–France Automation Tradeshow
–“If energy costs are making you feel black and blue, it’s time to see green” ad</inlineHelpText>
        <label>Creative / Headline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerType__c</fullName>
        <description>October2012</description>
        <label>Customer Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataCenterNetworkDoE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mar16 Release - Marketo related field</description>
        <label>Data Center &amp; Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DemographicScore__c</fullName>
        <description>July 2014 Demographic Score for Marketo</description>
        <label>Demographic Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmployeeSize__c</fullName>
        <description>July 2014 Employee Size for Marketo</description>
        <label>Employee Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2 to 5</fullName>
                </value>
                <value>
                    <fullName>6 to 9</fullName>
                </value>
                <value>
                    <fullName>10 to 49</fullName>
                </value>
                <value>
                    <fullName>50 to 99</fullName>
                </value>
                <value>
                    <fullName>100 to 999</fullName>
                </value>
                <value>
                    <fullName>1,000 to 4,999</fullName>
                </value>
                <value>
                    <fullName>5,000 to 24,999</fullName>
                </value>
                <value>
                    <fullName>&gt; 25,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engagement__c</fullName>
        <description>June 2016 Release: Engagement for bMA and bMA Transactional Lead</description>
        <formula>IF(RecordType.DeveloperName = &quot;Lead&quot;, mkto_si__Priority__c,IF(AND(RecordType.DeveloperName = &quot;NonMarcomLead&quot;, TransactionalLead__c = True), Contact__r.mkto_si__Priority__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <description>SEPTEMBER RELEASE - This custom field stores the type of job environment for a Lead.</description>
        <label>Environment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExistingLeadContactOwner__c</fullName>
        <label>Existing LeadContact Owner</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExistingLeadOwner__c</fullName>
        <formula>IF( Contact__c !=Null, Contact__r.ExistingLeadOwner__c, 
IF( LeadContact__c != null, LeadContact__r.ExistingLeadContactOwner__c ,&apos;&apos;)
 )</formula>
        <label>Existing Lead Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <formula>NonMarcommCampaign__r.EndDate</formula>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstLeadSource__c</fullName>
        <description>First Lead Source to Sync with Marketo - Mar16 Release</description>
        <label>First Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>External Referral</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Seminar - Internal</fullName>
                </value>
                <value>
                    <fullName>Seminar - Partner</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Word of mouth</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>LSO001</fullName>
                </value>
                <value>
                    <fullName>LSO002</fullName>
                </value>
                <value>
                    <fullName>LSO003</fullName>
                </value>
                <value>
                    <fullName>LSO004</fullName>
                </value>
                <value>
                    <fullName>LSO005</fullName>
                </value>
                <value>
                    <fullName>LSO006</fullName>
                </value>
                <value>
                    <fullName>LSO007</fullName>
                </value>
                <value>
                    <fullName>LSO008</fullName>
                </value>
                <value>
                    <fullName>LSO009</fullName>
                </value>
                <value>
                    <fullName>LSO010</fullName>
                </value>
                <value>
                    <fullName>LSO011</fullName>
                </value>
                <value>
                    <fullName>LSO012</fullName>
                </value>
                <value>
                    <fullName>LSO013</fullName>
                </value>
                <value>
                    <fullName>LSO014</fullName>
                </value>
                <value>
                    <fullName>LSO027</fullName>
                </value>
                <value>
                    <fullName>LSO015</fullName>
                </value>
                <value>
                    <fullName>LSO016</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FirstNameKana__c</fullName>
        <description>SEPTEMBER RELEASE - This custom object stores the First Name of Lead for 
Japanese Contatcs.</description>
        <inlineHelpText>For Japanese contacts only</inlineHelpText>
        <label>First Name Kana</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstSourceDetail__c</fullName>
        <description>First Source Detail to be synced with Marketo - Mar16 Release</description>
        <label>First Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasBudget__c</fullName>
        <defaultValue>false</defaultValue>
        <description>July 2014 Has Budget for Marketo</description>
        <label>Has Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>History_of_program_successes__c</fullName>
        <description>This field is created for storing the history of program success that is sync from Marketo. On Lead convert the changes will got to the contact field &apos;History of program successes&apos;. This also get copied to lead for a transactional lead from Contact.</description>
        <label>History of program successes</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HomeDoE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mar16 Release - Marketo related field</description>
        <label>Home</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IBGeniusID__c</fullName>
        <description>Created for reporting purpose on Lead and opportunity objects</description>
        <externalId>true</externalId>
        <label>IB Genius ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsConsumerLead__c</fullName>
        <formula>ISBLANK(Company)  ||  ( NOT(ISBLANK(Account__c)) &amp;&amp; Account__r.IsPersonAccount )</formula>
        <label>Is Consumer Lead?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>